Project saga_be {
  database_type: 'MySQL'
  Note: 'Figure 2.2 - Database schema: Academic'
}

Table subject {
  id char(36) [pk, not null]
  subject_code varchar(64) [not null, unique]
  name varchar(255) [not null]
  name_vietnamese varchar(255)
  status varchar(32) [not null]
  deleted_at datetime(6)
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table subject_syllabus_version {
  id char(36) [pk, not null]
  subject_id char(36) [not null]
  external_syllabus_id varchar(64)
  version_label varchar(64) [not null]
  status varchar(32) [not null]
  title_english varchar(255)
  title_vietnamese varchar(255)
  credits decimal(6,2)
  level varchar(64)
  learning_teaching_method text
  time_allocation text
  prerequisites text
  description text
  student_duties text
  tools text
  textbooks text
  reference_materials text
  grading_scale text
  published_at datetime(6)
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table syllabus_learning_outcome {
  id char(36) [pk, not null]
  syllabus_version_id char(36) [not null]
  code varchar(64) [not null]
  name varchar(255) [not null]
  description text
  order_index int [not null]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table syllabus_learning_unit {
  id char(36) [pk, not null]
  syllabus_version_id char(36) [not null]
  code varchar(64) [not null]
  name varchar(255) [not null]
  description text
  order_index int [not null]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table syllabus_phase {
  id char(36) [pk, not null]
  syllabus_version_id char(36) [not null]
  code varchar(64) [not null]
  name varchar(255) [not null]
  description text
  order_index int [not null]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table syllabus_expected_activity {
  id char(36) [pk, not null]
  syllabus_version_id char(36) [not null]
  phase_id char(36) [not null]
  code varchar(64) [not null]
  name varchar(255) [not null]
  description text
  order_index int [not null]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table syllabus_expected_deliverable {
  id char(36) [pk, not null]
  syllabus_version_id char(36) [not null]
  phase_id char(36) [not null]
  code varchar(64) [not null]
  name varchar(255) [not null]
  description text
  order_index int [not null]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table syllabus_phase_learning_outcome {
  id char(36) [pk, not null]
  syllabus_version_id char(36) [not null]
  phase_id char(36) [not null]
  learning_outcome_id char(36) [not null]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table syllabus_deliverable_learning_outcome {
  id char(36) [pk, not null]
  syllabus_version_id char(36) [not null]
  deliverable_id char(36) [not null]
  learning_outcome_id char(36) [not null]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table syllabus_learning_unit_outcome {
  id char(36) [pk, not null]
  syllabus_version_id char(36) [not null]
  learning_unit_id char(36) [not null]
  learning_outcome_id char(36) [not null]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table semester {
  id char(36) [pk, not null]
  code varchar(64) [not null, unique]
  name varchar(255) [not null]
  start_date datetime(6)
  end_date datetime(6)
  deleted_at datetime(6)
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table academic_class {
  id char(36) [pk, not null]
  semester_id char(36)
  class_code varchar(64) [not null, unique]
  name varchar(255) [not null]
  deleted_at datetime(6)
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table active_semester_setting {
  singleton_id tinyint [pk, not null]
  semester_id char(36)
  updated_at datetime(6) [not null]
  updated_by_user_id char(36)
}

Table course {
  id char(36) [pk, not null]
  subject_id char(36) [not null]
  syllabus_version_id char(36)
  academic_class_id char(36) [not null]
  semester_id char(36) [not null]
  instructor_id char(36)
  course_code varchar(64)
  name varchar(255) [not null]
  code_contribution_weight double [not null]
  test_contribution_weight double [not null]
  document_contribution_weight double [not null]
  research_contribution_weight double [not null]
  contribution_config_mode varchar(32) [not null]
  deleted_at datetime(6)
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table course_enrollment {
  id char(36) [pk, not null]
  student_profile_id char(36) [not null]
  course_id char(36) [not null]
  enrollment_status varchar(32) [not null]
  enrolled_at datetime(6) [not null]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table student_course_invitation {
  id char(36) [pk, not null]
  student_profile_id char(36)
  email varchar(255)
  student_code varchar(64)
  full_name varchar(255)
  course_id char(36) [not null]
  invitation_type varchar(32) [not null]
  invitation_status varchar(32) [not null]
  attempt_count int [not null]
  last_attempt_at datetime(6)
  processing_started_at datetime(6)
  sent_at datetime(6)
  failure_code varchar(64)
  version bigint [not null]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Ref: subject_syllabus_version.subject_id > subject.id
Ref: syllabus_learning_outcome.syllabus_version_id > subject_syllabus_version.id
Ref: syllabus_learning_unit.syllabus_version_id > subject_syllabus_version.id
Ref: syllabus_phase.syllabus_version_id > subject_syllabus_version.id
Ref: syllabus_expected_activity.phase_id > syllabus_phase.id
Ref: syllabus_expected_deliverable.phase_id > syllabus_phase.id
Ref: syllabus_phase_learning_outcome.phase_id > syllabus_phase.id
Ref: syllabus_phase_learning_outcome.learning_outcome_id > syllabus_learning_outcome.id
Ref: syllabus_deliverable_learning_outcome.deliverable_id > syllabus_expected_deliverable.id
Ref: syllabus_deliverable_learning_outcome.learning_outcome_id > syllabus_learning_outcome.id
Ref: syllabus_learning_unit_outcome.learning_unit_id > syllabus_learning_unit.id
Ref: syllabus_learning_unit_outcome.learning_outcome_id > syllabus_learning_outcome.id
Ref: academic_class.semester_id > semester.id
Ref: active_semester_setting.semester_id > semester.id
Ref: course.subject_id > subject.id
Ref: course.syllabus_version_id > subject_syllabus_version.id
Ref: course.academic_class_id > academic_class.id
Ref: course.semester_id > semester.id
Ref: course_enrollment.course_id > course.id
Ref: student_course_invitation.course_id > course.id
